<resources>
    <string name="app_name">My Application</string>
    <string name="xbid_ban_error_header_android">Hi, %1$s.</string>
    <string name="xbid_ban_error_body_android">"We can't sign you in because your account has been suspended from Xbox Live."</string>
    <string name="xbid_creation_error_android">"Sorry, we couldn't complete your Xbox profile. If it happens again, try setting it up at &lt;u>Xbox.com&lt;/u>"</string>
    <string name="xbid_catchall_error_android">Sorry, something went wrong. Give it another try, or try on &lt;u>Xbox.com&lt;/u></string>
    <string name="xbid_error_offline_android">"Make sure you're online, then try again. We can't connect right now."</string>
    <string name="xbid_close">Close</string>
    <string name="xbid_try_again">Try again</string>
    <string name="xbid_more_info">More info</string>
    <string name="xbid_sign_up_header">Welcome to Xbox</string>
    <string name="xbid_sign_up_subheader_android">"Here's your name on Xbox (or \"gamertag\"). Change it if you want!"</string>
    <string name="xbid_gamertag_placeholder">Gamertag</string>
    <string name="xbid_privacy_settings_header_android">Privacy settings: %1$s</string>
    <string name="xbid_age_group_adult">Adult default</string>
    <string name="xbid_age_group_teen">Teen default</string>
    <string name="xbid_age_group_child">Child default</string>
    <string name="xbid_age_group_adult_details_android">"Your friends and their friends can see if you're online, your game clips, and your recent apps and games. You can change these on &lt;u>Xbox.com&lt;/u>"</string>
    <string name="xbid_age_group_teen_details_android">"Your Xbox friends and their friends can see your real name and your profile. Your Xbox friends can see if you're online, your game clips, and your recent apps and games"</string>
    <string name="xbid_age_group_child_details_android">"Your Xbox friends can see your profile, but not your real name. Friends and their friends can see if you're online and available to play, but you'll need a parent's permission to add friends"</string>
    <string name="xbid_next">Next</string>
    <string name="xbid_claim_it">Claim it!</string>
    <string name="xbid_another_gamertag">Already have a gamertag?</string>
    <string name="xbid_another_sign_in">Sign in with a different Microsoft account</string>
    <string name="xbid_gamertag_check_availability">Check availability</string>
    <string name="xbid_gamertag_not_available_android">"That's taken. How about:"</string>
    <string name="xbid_gamertag_checking_android">Checking…</string>
    <string name="xbid_gamertag_available">Available!</string>
    <string name="xbid_gamertag_checking_error">An error occurred. Try again?</string>
    <string name="xbid_welcome_back">Welcome back!</string>
    <string name="xbid_customize_profile">You can customize your profile in the Xbox app</string>
    <string name="xbid_lets_play_android">"Let's play"</string>
    <string name="xbid_different_gamer_tag_answer">Switch accounts</string>
    <string name="xbid_introducing_android">Introducing…</string>
    <string name="xbid_gamertag_not_available_no_suggestions_android">"That's taken."</string>
    <string name="xbid_first_and_last_name_android">%1$s %2$s</string>
    <string name="xbid_friend_finder_opt_in">Find friends</string>
    <string name="xbid_voice_over_game_score_label_text">Gamerscore</string>
    <string name="xbid_voice_over_close_button_text">Close</string>
    <string name="xbid_gamerpic_choose_your_gamerpic">Choose your gamerpic</string>
    <string name="xbid_start_broadcasting">Start Broadcasting</string>
    <string name="xbox_live_game_invite_title">Game invite</string>
    <string name="xbox_live_game_invite_body">%1$s has invited you to play %2$s</string>
    <string name="xbox_live_game_invite_body_with_context_string">Xbox Live Game Invite Body With Context String</string>
    <string name="xbid_tools_gamertag">MasterChef</string>
    <string name="xbid_tools_user_name">John Smith</string>
    <string name="xbid_tools_email">john.smith@hotmail.com</string>
    <string name="xbid_tools_empty" />
    <string name="user_tile_image_content_description">The user\'s image.</string>
</resources>
