<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:msaui="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:id="@+id/xbid_scroll_container"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="@dimen/xbid_body_padding_horizontal"
        android:layout_marginRight="@dimen/xbid_body_padding_horizontal"
        android:fillViewport="true"
        android:layout_above="@+id/xbid_done"
        android:layout_alignParentTop="true">

        <LinearLayout
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/xbid_margin_body_standard"
                android:layout_marginBottom="@dimen/xbid_margin_body_standard"
                android:text="@string/xbid_introducing_android"
                style="@style/Body.Title" />

            <com.microsoft.xbox.idp.toolkit.CircleImageView
                android:id="@+id/xbid_gamerpic"
                android:layout_width="@dimen/xbid_body_image_diameter"
                android:layout_height="@dimen/xbid_body_image_diameter"
                android:layout_marginTop="@dimen/xbid_margin_body_standard"
                android:layout_marginBottom="@dimen/xbid_margin_body_standard" />

            <TextView
                android:id="@+id/xbid_gamertag"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/xbid_margin_body_standard"
                android:layout_marginBottom="@dimen/xbid_margin_body_standard"
                style="@style/Body.GamerTag" />

            <TextView
                android:id="@+id/xbid_display_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/xbid_margin_body_standard"
                android:layout_marginBottom="@dimen/xbid_margin_body_standard"
                style="@style/Body.UserName" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/xbid_customize_profile"
                style="@style/Body.SectionText" />
        </LinearLayout>
    </ScrollView>

    <View
        android:id="@+id/xbid_bottom_bar_shadow"
        android:background="@drawable/xbid_bottom_bar_shadow"
        android:layout_width="match_parent"
        android:layout_height="@dimen/xbid_bottom_bar_shadow_height"
        android:layout_above="@+id/xbid_done" />

    <Button
        android:id="@+id/xbid_done"
        android:focusable="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/xbid_body_padding_horizontal"
        android:layout_marginTop="@dimen/xbid_margin_button_top"
        android:layout_marginRight="@dimen/xbid_body_padding_horizontal"
        android:layout_marginBottom="@dimen/xbid_margin_button"
        android:text="@string/xbid_lets_play_android"
        android:layout_alignParentBottom="true"
        style="@style/Body.BottomButton" />
</RelativeLayout>
